fixed notifications and time
